--- a/dtc-travel-app/dtc-travel-app/Base.lproj/Main.storyboard
+++ b/dtc-travel-app/dtc-travel-app/Base.lproj/Main.storyboard
@@ -20,12 +20,59 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="gC5-2w-M0Q" kind="relationship" relationship="rootViewController" id="zZi-Hp-MjA"/>
+                        <segue destination="Tne-vX-sDN" kind="relationship" relationship="rootViewController" id="j8a-89-wki"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h55-T8-J7Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3864" y="213"/>
+            <point key="canvasLocation" x="-4282" y="193"/>
+        </scene>
+        <!--My Trips-->
+        <scene sceneID="nsd-q9-qiQ">
+            <objects>
+                <collectionViewController id="Tne-vX-sDN" customClass="MyTripsViewController" customModule="dtc_travel_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="iOK-g4-dNz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dqK-8i-oi6">
+                            <size key="itemSize" width="140" height="140"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="tripCell" reuseIdentifier="tripCell" id="4hA-ap-DNq" customClass="TripPhotoCell" customModule="dtc_travel_app" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lOF-du-Rwd">
+                                            <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <connections>
+                                    <outlet property="imageView" destination="lOF-du-Rwd" id="Lq4-uq-jTA"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="Tne-vX-sDN" id="Mds-lj-6sv"/>
+                            <outlet property="delegate" destination="Tne-vX-sDN" id="J3O-PT-0Hz"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="My Trips" id="mQ6-x1-yFg" userLabel="My Trips"/>
+                    <connections>
+                        <segue destination="gC5-2w-M0Q" kind="show" identifier="showTrip" id="JkU-9K-p9p"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gFV-9i-8V5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4282.3999999999996" y="901.79910044977521"/>
         </scene>
         <!--Klyde Warren Trip-->
         <scene sceneID="xXB-h4-yal">
