--- a/dtc-travel-app/dtc-travel-app/Base.lproj/Main.storyboard
+++ b/dtc-travel-app/dtc-travel-app/Base.lproj/Main.storyboard
@@ -20,59 +20,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Tne-vX-sDN" kind="relationship" relationship="rootViewController" id="j8a-89-wki"/>
+                        <segue destination="CJG-W5-Luq" kind="relationship" relationship="rootViewController" id="XRK-Vx-nKw"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h55-T8-J7Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-4282" y="193"/>
-        </scene>
-        <!--My Trips-->
-        <scene sceneID="nsd-q9-qiQ">
-            <objects>
-                <collectionViewController id="Tne-vX-sDN" customClass="MyTripsViewController" customModule="dtc_travel_app" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="iOK-g4-dNz">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dqK-8i-oi6">
-                            <size key="itemSize" width="140" height="140"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="tripCell" reuseIdentifier="tripCell" id="4hA-ap-DNq" customClass="TripPhotoCell" customModule="dtc_travel_app" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lOF-du-Rwd">
-                                            <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                    </subviews>
-                                </view>
-                                <connections>
-                                    <outlet property="imageView" destination="lOF-du-Rwd" id="Lq4-uq-jTA"/>
-                                </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="Tne-vX-sDN" id="Mds-lj-6sv"/>
-                            <outlet property="delegate" destination="Tne-vX-sDN" id="J3O-PT-0Hz"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" title="My Trips" id="mQ6-x1-yFg" userLabel="My Trips"/>
-                    <connections>
-                        <segue destination="gC5-2w-M0Q" kind="show" identifier="showTrip" id="JkU-9K-p9p"/>
-                    </connections>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gFV-9i-8V5" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-4282.3999999999996" y="901.79910044977521"/>
         </scene>
         <!--Klyde Warren Trip-->
         <scene sceneID="xXB-h4-yal">
@@ -241,6 +194,94 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EkX-ka-e5w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2152.8000000000002" y="504.19790104947532"/>
+        </scene>
+        <!--My Trips-->
+        <scene sceneID="cmJ-A0-YqJ">
+            <objects>
+                <viewController id="CJG-W5-Luq" customClass="MyTripsViewController" customModule="dtc_travel_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DPo-OI-tE7"/>
+                        <viewControllerLayoutGuide type="bottom" id="rFZ-lg-RmR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wZz-U6-46A">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FdR-Ge-Oce">
+                                <rect key="frame" x="0.0" y="591" width="375" height="77"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IdL-vb-bfp">
+                                        <rect key="frame" x="162" y="13" width="51" height="51"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                        <state key="normal" title="+"/>
+                                        <connections>
+                                            <action selector="addTapped:" destination="gC5-2w-M0Q" eventType="touchUpInside" id="b7u-qZ-Ruj"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BI1-ug-69w">
+                                <rect key="frame" x="0.0" y="72" width="375" height="511"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LR2-9n-jRs">
+                                    <size key="itemSize" width="140" height="140"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="tripCell" id="44R-s4-rnH" customClass="TripPhotoCell" customModule="dtc_travel_app" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Fi-1i-z9N">
+                                                    <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="0Fi-1i-z9N" firstAttribute="leading" secondItem="44R-s4-rnH" secondAttribute="leading" id="EqT-7W-nfR"/>
+                                            <constraint firstAttribute="bottom" secondItem="0Fi-1i-z9N" secondAttribute="bottom" id="STM-3i-A25"/>
+                                            <constraint firstAttribute="trailing" secondItem="0Fi-1i-z9N" secondAttribute="trailing" id="a69-F6-D9b"/>
+                                            <constraint firstItem="0Fi-1i-z9N" firstAttribute="top" secondItem="44R-s4-rnH" secondAttribute="top" id="pI8-1S-Zcy"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="0Fi-1i-z9N" id="xAF-xM-iJU"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="CJG-W5-Luq" id="zqJ-9O-i3H"/>
+                                    <outlet property="delegate" destination="CJG-W5-Luq" id="6Js-7R-dH5"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BI1-ug-69w" firstAttribute="leading" secondItem="FdR-Ge-Oce" secondAttribute="leading" id="1BB-Ao-AZz"/>
+                            <constraint firstAttribute="trailing" secondItem="BI1-ug-69w" secondAttribute="trailing" id="C1a-RL-uZo"/>
+                            <constraint firstItem="rFZ-lg-RmR" firstAttribute="top" secondItem="BI1-ug-69w" secondAttribute="bottom" constant="84" id="KbA-ro-OMi"/>
+                            <constraint firstItem="BI1-ug-69w" firstAttribute="top" secondItem="DPo-OI-tE7" secondAttribute="bottom" constant="8" symbolic="YES" id="OZD-Vh-8aJ"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="FdR-Ge-Oce" secondAttribute="bottom" constant="-1" id="b3T-Xn-NCy"/>
+                            <constraint firstItem="BI1-ug-69w" firstAttribute="leading" secondItem="wZz-U6-46A" secondAttribute="leading" id="b5b-fa-lwX"/>
+                            <constraint firstItem="FdR-Ge-Oce" firstAttribute="top" secondItem="BI1-ug-69w" secondAttribute="bottom" constant="8" symbolic="YES" id="bjA-Yk-tRa"/>
+                            <constraint firstItem="BI1-ug-69w" firstAttribute="trailing" secondItem="FdR-Ge-Oce" secondAttribute="trailing" id="tpr-Sz-Wgt"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="My Trips" id="f7i-ob-fcv" userLabel="My Trips"/>
+                    <connections>
+                        <outlet property="collectionView" destination="BI1-ug-69w" id="3Y8-XS-57c"/>
+                        <segue destination="gC5-2w-M0Q" kind="show" identifier="showTrip" id="1ey-MI-rCC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XJo-ys-ZB0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4284" y="957.57121439280365"/>
         </scene>
         <!--Entry Options Popover View Controller-->
         <scene sceneID="aXp-bJ-vM7">
