--- a/dtc-travel-app/dtc-travel-app/TextEntryDetail.storyboard
+++ b/dtc-travel-app/dtc-travel-app/TextEntryDetail.storyboard
@@ -13,7 +13,7 @@
         <!--Text Entry Detail View Controller-->
         <scene sceneID="vn6-r5-t7V">
             <objects>
-                <viewController id="p5o-ge-19M" customClass="TextEntryDetailViewController" customModule="dtc_travel_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="textEntryDetail" id="p5o-ge-19M" customClass="TextEntryDetailViewController" customModule="dtc_travel_app" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="CRz-66-DgT"/>
                         <viewControllerLayoutGuide type="bottom" id="o4B-AS-yxD"/>
@@ -40,26 +40,42 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.75" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="16m-aQ-qjC">
-                                <rect key="frame" x="16" y="102" width="343" height="535"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.75" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="16m-aQ-qjC">
+                                <rect key="frame" x="16" y="102" width="343" height="478"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rAS-1I-3G8">
+                                <rect key="frame" x="68" y="613" width="239" height="34"/>
+                                <color key="backgroundColor" red="0.08235294118" green="0.40000000000000002" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="Aof-EJ-acP"/>
+                                </constraints>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="doneTapped:" destination="p5o-ge-19M" eventType="touchUpInside" id="Pl9-9W-bH6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="16m-aQ-qjC" firstAttribute="top" secondItem="x1N-bM-WFd" secondAttribute="bottom" constant="30" id="0Rr-dy-8ex"/>
+                            <constraint firstItem="o4B-AS-yxD" firstAttribute="top" secondItem="rAS-1I-3G8" secondAttribute="bottom" constant="20" id="86r-Hd-Qi1"/>
                             <constraint firstItem="7Kc-hK-nff" firstAttribute="top" secondItem="CRz-66-DgT" secondAttribute="bottom" constant="8" id="BnB-dz-22u"/>
                             <constraint firstItem="7Kc-hK-nff" firstAttribute="leading" secondItem="6sa-9g-j0M" secondAttribute="leadingMargin" id="CdJ-Xp-0F6"/>
-                            <constraint firstItem="o4B-AS-yxD" firstAttribute="top" secondItem="16m-aQ-qjC" secondAttribute="bottom" constant="30" id="KLI-bx-pEb"/>
+                            <constraint firstItem="o4B-AS-yxD" firstAttribute="top" secondItem="16m-aQ-qjC" secondAttribute="bottom" constant="87" id="KLI-bx-pEb"/>
                             <constraint firstItem="x1N-bM-WFd" firstAttribute="leading" secondItem="6sa-9g-j0M" secondAttribute="leadingMargin" id="XtR-85-60l"/>
                             <constraint firstItem="7Kc-hK-nff" firstAttribute="trailing" secondItem="6sa-9g-j0M" secondAttribute="trailingMargin" id="fL7-M6-lkW"/>
                             <constraint firstItem="x1N-bM-WFd" firstAttribute="trailing" secondItem="6sa-9g-j0M" secondAttribute="trailingMargin" id="fhr-Eq-UuA"/>
                             <constraint firstItem="16m-aQ-qjC" firstAttribute="trailing" secondItem="6sa-9g-j0M" secondAttribute="trailingMargin" id="jqR-Ae-lho"/>
                             <constraint firstItem="16m-aQ-qjC" firstAttribute="leading" secondItem="6sa-9g-j0M" secondAttribute="leadingMargin" id="lcK-qB-xJY"/>
                             <constraint firstItem="x1N-bM-WFd" firstAttribute="top" secondItem="7Kc-hK-nff" secondAttribute="bottom" id="qfU-M1-A7c"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="rAS-1I-3G8" secondAttribute="trailing" constant="52" id="sLw-oY-8PC"/>
+                            <constraint firstItem="rAS-1I-3G8" firstAttribute="leading" secondItem="6sa-9g-j0M" secondAttribute="leadingMargin" constant="52" id="spU-EZ-wZS"/>
                         </constraints>
                     </view>
                     <connections>
